adding dynamic data

--- a/src/index.njk
+++ b/src/index.njk
@@ -4,9 +4,17 @@ layout: base.njk
 ---
 
  <div class="container">
-      <h1>This is a page for you</h1>
-      <div class="vibe">You are great!</div>
-      <div class="love">❤️</div>
-      <a href="/about">Go to about</a>
-    </div>
+  <h1>This is a page for you</h1>
+  <div class="vibe">You are great!</div>
+  <div class="love">❤️</div>
+  <a href="/about">Go to about</a>
+</div>
+<ul>
+{% for article in getNews.articles %}
+  <li>
+  <h2><a href="{{ article.url}}">{{article.title }}</a></h2>
+  <span>{{article.source.name}} - <time>{{article.publishedAt}}</time></span>
+  </li>
+{% endfor %}
+</ul>
 <script src="/js/vibe.js"></script>
