--- a/src/index.njk
+++ b/src/index.njk
@@ -10,7 +10,7 @@ layout: base.njk
   <a href="/about">Go to about</a>
 </div>
 <ul>
-{% for article in getNews.articles %}
+{% for article in getNews[2].articles %}
   <li>
   <h2><a href="{{ article.url}}">{{article.title }}</a></h2>
   <span>{{article.source.name}} - <time>{{article.publishedAt}}</time></span>
