--- a/src/about.njk
+++ b/src/about.njk
@@ -10,3 +10,7 @@ layout: base.njk
       <a href="/">Go home</a>
     </div>
 <script src="/js/vibe.js"></script>
+
+{% for item in getNews %}
+  <a href="/{{item.country}}">{{item.country}}</a>
+{% endfor %}
