--- a/src/localized.njk
+++ b/src/localized.njk
@@ -1,16 +1,21 @@
 ---
-title: A page for you
+title: Daily briefing
 layout: base.njk
+pagination:
+  data: getNews
+  size: 1
+  alias: getNews
+permalink: /{{getNews.country}}/index.html
 ---
 
-<div class="container">
+ <div class="container">
   <h1>This is a page for you</h1>
   <div class="vibe">You are great!</div>
   <div class="love">❤️</div>
   <a href="/about">Go to about</a>
 </div>
 <ul>
-{% for article in getNews[2].articles %}
+{% for article in getNews.articles %}
   <li>
   <h2><a href="{{ article.url}}">{{article.title }}</a></h2>
   <span>{{article.source.name}} - <time>{{article.publishedAt}}</time></span>
